generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum RoleName {
  SUPER_ADMIN
  HOSPITAL_ADMIN
  DOCTOR
  NURSE
  RECEPTIONIST
  PHARMACIST
  LAB_TECH
  ACCOUNTANT
  PATIENT
}

enum AppointmentStatus {
  PENDING
  CONFIRMED
  CANCELLED
  COMPLETED
  NO_SHOW
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
  REFUNDED
}

enum Gender {
  MALE
  FEMALE
  OTHER
}

model Hospital {
  id          String    @id @default(uuid())
  name        String
  code        String    @unique
  address     String?
  phone       String?
  email       String?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  staff       Staff[]
  patients    Patient[]
  wards       Ward[]
  drugStocks  DrugInventory[]
}

model Role {
  id          String   @id @default(uuid())
  name        RoleName @unique
  description String?
  createdAt   DateTime @default(now())

  users       User[]
}

model User {
  id           String   @id @default(uuid())
  email        String   @unique
  passwordHash String
  isActive     Boolean  @default(true)
  roleId       String
  hospitalId   String?  // optional association for hospital staff
  createdAt    DateTime @default(now())

  role         Role     @relation(fields: [roleId], references: [id])
  hospital     Hospital? @relation(fields: [hospitalId], references: [id])
  staff        Staff?
  patient      Patient?
  sessions     RefreshToken[]
}

model RefreshToken {
  id         String   @id @default(uuid())
  token      String   @unique
  userId     String
  revoked    Boolean  @default(false)
  expiresAt  DateTime
  createdAt  DateTime @default(now())

  user       User     @relation(fields: [userId], references: [id])
}

model Staff {
  id             String   @id @default(uuid())
  userId         String   @unique
  hospitalId     String
  firstName      String
  lastName       String
  staffNumber    String   @unique
  position       String
  specialty      String?
  phone          String?
  email          String?
  hiredAt        DateTime?
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  user           User     @relation(fields: [userId], references: [id])
  hospital       Hospital @relation(fields: [hospitalId], references: [id])
  schedules      Schedule[]
  appointments   Appointment[]
  encounters     Encounter[]
  labRequests    LabRequest[]
}

model Patient {
  id                  String    @id @default(uuid())
  hospitalId          String
  userId              String?   @unique
  medicalRecordNumber String    @unique
  firstName           String
  lastName            String
  otherNames          String?
  dob                 DateTime?
  gender              Gender?
  phone               String?
  email               String?
  nhifNumber          String?
  address             String?
  createdAt           DateTime  @default(now())
  updatedAt           DateTime  @updatedAt
  deletedAt           DateTime?

  hospital            Hospital  @relation(fields: [hospitalId], references: [id])
  user                User?     @relation(fields: [userId], references: [id])
  contacts            Contact[]
  medicalHistories    MedicalHistory[]
  allergies           Allergy[]
  visits              Visit[]
  appointments        Appointment[]
  encounters          Encounter[]
  prescriptions       Prescription[]
  admissions          Admission[]
  files               FileAttachment[]
}

model Contact {
  id         String   @id @default(uuid())
  patientId  String
  name       String
  relation   String
  phone      String
  email      String?
  createdAt  DateTime @default(now())

  patient    Patient  @relation(fields: [patientId], references: [id])
}

model MedicalHistory {
  id         String   @id @default(uuid())
  patientId  String
  title      String
  details    String
  recordedAt DateTime @default(now())

  patient    Patient  @relation(fields: [patientId], references: [id])
}

model Allergy {
  id         String   @id @default(uuid())
  patientId  String
  substance  String
  reaction   String?
  severity   String?
  createdAt  DateTime @default(now())

  patient    Patient  @relation(fields: [patientId], references: [id])
}

model Visit {
  id         String   @id @default(uuid())
  patientId  String
  hospitalId String
  type       String?  // outpatient/inpatient/emergency
  visitAt    DateTime @default(now())
  reason     String?
  notes      String?

  patient    Patient  @relation(fields: [patientId], references: [id])
  hospital   Hospital @relation(fields: [hospitalId], references: [id])
  encounter  Encounter?
}

model Appointment {
  id           String            @id @default(uuid())
  patientId    String
  doctorId     String?
  hospitalId   String
  scheduledAt  DateTime
  status       AppointmentStatus @default(PENDING)
  queueNumber  Int?
  createdAt    DateTime          @default(now())
  updatedAt    DateTime          @updatedAt

  patient      Patient           @relation(fields: [patientId], references: [id])
  doctor       Staff?            @relation(fields: [doctorId], references: [id])
  hospital     Hospital          @relation(fields: [hospitalId], references: [id])
}

model Encounter {
  id           String    @id @default(uuid())
  patientId    String
  doctorId     String
  appointmentId String?
  visitId      String?
  notes        String?
  diagnosis    String?
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt

  patient      Patient   @relation(fields: [patientId], references: [id])
  doctor       Staff     @relation(fields: [doctorId], references: [id])
  appointment  Appointment? @relation(fields: [appointmentId], references: [id])
  visit        Visit?    @relation(fields: [visitId], references: [id])
  prescriptions Prescription[]
  labRequests  LabRequest[]
  files        FileAttachment[]
}

model Prescription {
  id           String   @id @default(uuid())
  encounterId  String
  prescribedBy String   // staffId
  notes        String?
  createdAt    DateTime @default(now())

  encounter    Encounter @relation(fields: [encounterId], references: [id])
  items        PrescriptionItem[]
}

model PrescriptionItem {
  id             String @id @default(uuid())
  prescriptionId String
  drugName       String
  brand          String?
  dose           String?
  frequency      String?
  duration       String?

  prescription   Prescription @relation(fields: [prescriptionId], references: [id])
}

model DrugInventory {
  id           String   @id @default(uuid())
  hospitalId   String
  name         String
  brand        String?
  batchNumber  String?
  quantity     Int      @default(0)
  minQuantity  Int      @default(0)
  expiryDate   DateTime?
  createdAt    DateTime @default(now())

  hospital     Hospital @relation(fields: [hospitalId], references: [id])
}

model LabRequest {
  id           String   @id @default(uuid())
  encounterId  String?
  requestedBy  String   // staffId
  patientId    String
  testType     String
  status       String   @default("PENDING")
  requestedAt  DateTime @default(now())

  encounter    Encounter? @relation(fields: [encounterId], references: [id])
  patient      Patient    @relation(fields: [patientId], references: [id])
  results      LabResult[]
}

model LabResult {
  id          String   @id @default(uuid())
  labRequestId String
  resultData  Json
  reportedBy  String?
  reportedAt  DateTime?

  labRequest  LabRequest @relation(fields: [labRequestId], references: [id])
}

model FileAttachment {
  id           String   @id @default(uuid())
  hospitalId   String?
  patientId    String?
  encounterId  String?
  labResultId  String?
  filename     String
  storageKey   String   // S3 key or object path
  mimeType     String
  size         Int
  encrypted    Boolean  @default(true)
  uploadedAt   DateTime @default(now())

  patient      Patient? @relation(fields: [patientId], references: [id])
  encounter    Encounter? @relation(fields: [encounterId], references: [id])
  labResult    LabResult? @relation(fields: [labResultId], references: [id])
}

model Invoice {
  id           String   @id @default(uuid())
  hospitalId   String
  patientId    String
  issuedAt     DateTime @default(now())
  totalAmount  Float
  status       PaymentStatus @default(PENDING)
  createdAt    DateTime @default(now())

  patient      Patient  @relation(fields: [patientId], references: [id])
  payments     Payment[]
}

model Payment {
  id         String   @id @default(uuid())
  invoiceId  String
  method     String
  amount     Float
  status     PaymentStatus @default(PENDING)
  reference  String?
  createdAt  DateTime @default(now())

  invoice    Invoice  @relation(fields: [invoiceId], references: [id])
}

model Ward {
  id          String   @id @default(uuid())
  hospitalId  String
  name        String
  capacity    Int
  createdAt   DateTime @default(now())

  hospital    Hospital @relation(fields: [hospitalId], references: [id])
  beds        Bed[]
}

model Bed {
  id        String   @id @default(uuid())
  wardId    String
  bedNumber String
  occupied  Boolean  @default(false)

  ward      Ward     @relation(fields: [wardId], references: [id])
  admission Admission?
}

model Admission {
  id          String   @id @default(uuid())
  patientId   String
  bedId       String
  admittedAt  DateTime @default(now())
  dischargedAt DateTime?
  notes       String?

  patient     Patient  @relation(fields: [patientId], references: [id])
  bed         Bed      @relation(fields: [bedId], references: [id])
}

model Schedule {
  id        String   @id @default(uuid())
  staffId   String
  dayOfWeek Int
  fromTime  String
  toTime    String

  staff     Staff    @relation(fields: [staffId], references: [id])
}

model AuditLog {
  id         String   @id @default(uuid())
  actorId    String?
  action     String
  entity     String
  entityId   String
  changes    Json?
  createdAt  DateTime @default(now())
}

@@index([medicalRecordNumber])
